pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    component: backend-pod
spec:
  containers:
    - name: backend
      image: qanguyen/demo-gradle-2
      ports:
        - containerPort: 8080
