postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: booking-postgres
  template:
    metadata:
      labels:
        name: booking-postgres
    spec:
      containers:
        - name: booking-postgres
          image: postgres:12.7
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              protocol: TCP
              name: postgresql
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: booking-pvc
---
apiVersion: v1
kind: "Service"
metadata:
  name: booking-postgres-service
  labels:
    name: booking-postgres-service
  annotations:
    description: Booking postgres
spec:
  type: NodePort
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      nodePort: 31111
      protocol: TCP
  selector:
    name: booking-postgres
  sessionAffinity: "None"
