service.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    name: booking-backend
